// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space rtl render component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Space should render correct with children 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right: 8px;"
  >
    text1
  </div>
  <div
    class="ant-space-item"
    style="margin-right: 8px;"
  >
    <span>
      text1
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    text3
  </div>
</div>
`;

exports[`Space should render width ConfigProvider 1`] = `
Array [
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 24px;"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 16px;"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 24px;"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
]
`;

exports[`Space should render width rtl 1`] = `
Array [
  <div
    class="ant-space ant-space-horizontal ant-space-rtl ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-left: 8px;"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-rtl ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-left: 16px;"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-rtl ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-left: 24px;"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
]
`;

exports[`Space split 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right: 4px;"
  >
    text1
  </div>
  <span
    class="ant-space-item-split"
    style="margin-right: 4px;"
  >
    -
  </span>
  <div
    class="ant-space-item"
    style="margin-right: 4px;"
  >
    <span>
      text1
    </span>
  </div>
  <span
    class="ant-space-item-split"
    style="margin-right: 4px;"
  >
    -
  </span>
  <div
    class="ant-space-item"
  >
    text3
  </div>
</div>
`;
